Adicionando tela de detalhes de paciente; Editando alguns detalhes da tela principal

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="paciente">
                 <div class="estado-pagamento"></div>
                 <div class="info">
-                    <p class="nome-paciente">Leandro</p>
+                    <a href="./pacientes.html"><p class="nome-paciente">Leandro</p></a>
                     <p class="dias-atendimento">seg, sex, sáb</p>
                 </div>
                 <div class="money">
