--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/jquery-weekdays.css">
     <title>PsicoAnalise</title>
 </head>
-<body>
+<body id="body">
     <div class="cont-receber">
         <div class="tot-receber">
             <h3 class="header-tot">Total a receber</h3>
@@ -21,42 +22,35 @@
         </div>
     </div>
     <div class="down-side">
-        <div class="lista-pacientes panel">
-            <div class="paciente">
-                <div class="estado-pagamento"></div>
-                <div class="info">
-                    <a href="./pacientes.html"><p class="nome-paciente">Leandro</p></a>
-                    <p class="dias-atendimento">seg, sex, sáb</p>
-                </div>
-                <div class="money">
-                    <p class="quantidade-devendo">R$1000</p>
-                </div>
-            </div>
-            <div class="paciente">
-                <div class="estado-pagamento"></div>
-                <div class="info">
-                    <p class="nome-paciente">Leandro</p>
-                    <p class="dias-atendimento">seg, sex, sáb</p>
-                </div>
-                <div class="money">
-                    <p class="quantidade-devendo">R$1000</p>
-                </div>
-            </div>
+        <div class="lista-pacientes panel" id="lista-pacientes">
         </div>
     
         <div class="cont-cadastro">
             <form>
                 <label for="nome">Nome do paciente</label>
                 <input type="text" name="nome" id="nome" placeholder="Nome" required>
+                <div>
+                    <label for="valor">Valor por seção</label>
+                    <input class="half-input" type="number" name="valor" id="valor" min="1" step="any" placeholder="Valor" required>
+                </div>
+                <div class="weekDays-selector">
+                        <label for="weekday">Seções</label> <br>
+                        <input type="checkbox"  name="weekday" id="weekday-mon2" val="dom" class="weekday" />
+                        <label for="weekday-mon2">D</label>
+                        <input type="checkbox"  name="weekday" id="weekday-tue2" val="seg" class="weekday" />
+                        <label for="weekday-tue2">S</label>
+                        <input type="checkbox"  name="weekday" id="weekday-wed2" val="ter" class="weekday" />
+                        <label for="weekday-wed2">T</label>
+                        <input type="checkbox"  name="weekday" id="weekday-thu2" val="qua" class="weekday" />
+                        <label for="weekday-thu2">Q</label>
+                        <input type="checkbox"  name="weekday" id="weekday-fri2" val="qui" class="weekday" />
+                        <label for="weekday-fri2">Q</label>
+                        <input type="checkbox"  name="weekday" id="weekday-sat2" val="sex" class="weekday" />
+                        <label for="weekday-sat2">S</label>
+                        <input type="checkbox"  name="weekday" id="weekday-sun2" val="sab" class="weekday" />
+                        <label for="weekday-sun2">S</label>
+                    </div>
 
-                    <div>
-                        <label for="consultas">Seções</label>
-                        <input class="half-input" type="number" name="consultas" id="consultas" min="1" max="30" placeholder="Seções" required>    
-                    </div>
-                    <div>
-                        <label for="valor">Valor</label>
-                        <input class="half-input" type="number" name="valor" id="valor" min="1" step="any" placeholder="Valor" required>
-                    </div>
 
                 <input class="bottom-button" type="submit" value="Cadastrar">
             </form>
