--- a/pacientes.html
+++ b/pacientes.html
@@ -18,7 +18,7 @@
         <h1 class="paciente-nome">Leandro</h1>
     </div>
     <div class="down-side">
-        <div class="lista-pacientes panel">
+        <div class="lista-pacientes panel" id="lista-contas">
             <div class="paciente">
                 <div class="valor-cont">
                     <p class="devendo">R$100</p>
@@ -26,78 +26,6 @@
                 </div>
                 <div class="pardon-cont">
                     <svg id="pardon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"/></svg>
-                </div>
-            </div>
-            <div class="paciente">
-                <div class="valor-cont">
-                    <p class="devendo">R$100</p>
-                    <p class="data-conta">12/2020</p>
-                </div>
-                <div class="pardon-cont">
-
-                </div>
-            </div>
-            <div class="paciente">
-                <div class="valor-cont">
-                    <p class="devendo">R$100</p>
-                    <p class="data-conta">12/2020</p>
-                </div>
-                <div class="pardon-cont">
-
-                </div>
-            </div>
-            <div class="paciente">
-                <div class="valor-cont">
-                    <p class="devendo">R$100</p>
-                    <p class="data-conta">12/2020</p>
-                </div>
-                <div class="pardon-cont">
-
-                </div>
-            </div>
-            <div class="paciente">
-                <div class="valor-cont">
-                    <p class="devendo">R$100</p>
-                    <p class="data-conta">12/2020</p>
-                </div>
-                <div class="pardon-cont">
-
-                </div>
-            </div>
-            <div class="paciente">
-                <div class="valor-cont">
-                    <p class="devendo">R$100</p>
-                    <p class="data-conta">12/2020</p>
-                </div>
-                <div class="pardon-cont">
-
-                </div>
-            </div>
-            <div class="paciente">
-                <div class="valor-cont">
-                    <p class="devendo">R$100</p>
-                    <p class="data-conta">12/2020</p>
-                </div>
-                <div class="pardon-cont">
-
-                </div>
-            </div>
-            <div class="paciente">
-                <div class="valor-cont">
-                    <p class="devendo">R$100</p>
-                    <p class="data-conta">12/2020</p>
-                </div>
-                <div class="pardon-cont">
-
-                </div>
-            </div>
-            <div class="paciente">
-                <div class="valor-cont">
-                    <p class="devendo">R$100</p>
-                    <p class="data-conta">12/2020</p>
-                </div>
-                <div class="pardon-cont">
-
                 </div>
             </div>
         </div>
@@ -117,4 +45,5 @@
             </form>
         </div>
     </div>
+    <script src="./scripts/eventsHandler.js" defer></script>
 </body>
