Modificando locais de arquivo e mudando nomes

--- a/pacientes.html
+++ b/pacientes.html
@@ -36,5 +36,5 @@
             </form>
         </div>
     </div>
-    <script src="./scripts/eventsHandler.js"></script>
+    <script src="./scripts/dividas/dividasEventsHandler.js"></script>
 </body>
