--- a/html/pacientes.html
+++ b/html/pacientes.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/paciente.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/paciente.css">
     <title>PsicoAnalise</title>
 </head>
 <body>
@@ -36,5 +36,5 @@
             </form>
         </div>
     </div>
-    <script src="./scripts/dividas/dividasEventsHandler.js"></script>
+    <script src="../scripts/dividas/dividasEventsHandler.js"></script>
 </body>
