Ajustes em registro e visualização de dados

--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
                         <label for="weekday-fri2">Q</label>
                         <input type="checkbox"  name="weekday" id="weekday-sat2" value="sex" class="weekday" />
                         <label for="weekday-sat2">S</label>
-                        <input type="checkbox"  name="weekday" id="weekday-sun2" value="sab" class="weekday" />
+                        <input type="checkbox"  name="weekday" id="weekday-sun2" value="sáb" class="weekday" />
                         <label for="weekday-sun2">S</label>
                     </div>
 
